# terrology

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
docs/: bambu_3mf_format.md
terrology/: builder.py  cache.py  cli.py  decorations.py  exporter.py  fetcher.py  gpx.py  serve.py
tests/: test_builder.py  test_cache.py  test_decorations.py  test_exporter.py  test_fetcher.py  test_gpx.py  test_integration.py  test_main_helpers.py  test_output_quality.py
web/: app.py  generate.py  jobs.py
web/static/: app.js  index.html  preview.js  style.css
