[project]
name = "terrology"
version = "1.3.0"
description = "Generate 3D-printable terrain maps from OpenStreetMap + OpenTopography"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "lxml>=6.1.0",
    "manifold3d>=2.5.1",
    "matplotlib>=3.9",
    "mapbox-earcut>=2.0.0",
    "numpy>=2.4.4",
    "osmnx>=2.1.0",
    "overturemaps>=0.7",
    "pyproj>=3.7.2",
    "rasterio>=1.3",
    "requests>=2.33.1",
    "rtree>=1.4.1",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "tqdm>=4",
    "trimesh>=4.12.1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
terrology = "terrology.cli:main"
terrology-web = "terrology.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["terrology", "web"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-requests>=2",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E702"]   # E501: long lines; E702: semicolons used for compact matrix index defs

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
